# dogmash.old

./: .gitignore  README.md  downloadimages.py  pyproject.toml  requirements.txt
dogmash/: __init__.py  calculations.py  config.py  db.sqlite  exceptions.py  models.py  operations.py  views.py
dogmash/static/: style.css
dogmash/static/js/: updateratings.js
dogmash/templates/: index.html
tests/integration/: conftest.py  test_models_integ.py  test_operations_integ.py  test_views_integ.py
tests/unit/: test_calculations_unit.py
